﻿
6/7/2016:
* UP: few improvements in cset management
* UP: UnitTest module now support custom tests consisting in arbitrary pieces of code, aimed at testing specific internals not related to language constructs


30/6/2016:
* REFACT: Report.Alert.cset extended with set operations and moved to FSharp.Common.Collections


29/6/2016:
* UP: cset type represents complement-able sets (was vset)
* REFACT: UnitTester rewritten according to new cset system for dealing with alerts (hints and warnings)


21/6/2016:
* UP: unit test internals furtherly improved: scores and infs population is cleaner now and multiple results for each entry are supported (success, weak issue or errors)


17/6/2016:
* UP: UnitTest internals revamped: now each entry computes a list of (score * msg) tuples, which are then sorted according to severity and the final
      result is the worst in the list


13/6/2016:
* UP: flag manegement in UnitTest revamped even more: it now supports checking whether warnings and hints actually take place, via
      a special scope-tracer object which can track warnings or hints shot while type-checking 


10/6/2016:
* UP: UnitTest flags for warning and hint manipulation have been extended and tested


8-9/6/2016:
* UP: warning and hint report system revamped: now supports free enabling and disabling, plus it's reused by both hints and warnings


7/6/2016:
* FIX: auto generalization with an empty quantified variable set is now treated as a non-generalization: this fixes the unwanted hint message
       when no type variable was actually generalized


6/6/2016:
* back to Lw after some weeks off
* UP: logger supports continuations post-printing
* FIX: warning and hint messages are now properly normalized now thanks to the new logger continuation mechanism


28/4/2016:
* FIX: some fixes in scoped vars, type annotations and relevant unit tests


22/4/2016:
* FIX: scoped vars removed from scoped vars env by value


21/4/2016: