@@ -1,4 +1,8 @@
 ﻿
+12/7/2016:
+* FIX: warning and hint csets are checked correctly in UnitTester now
+
+
 6/7/2016:
 * UP: few improvements in cset management
 * UP: UnitTest module now support custom tests consisting in arbitrary pieces of code, aimed at testing specific internals not related to language constructs
